[project]
name = "rag-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.5.0",
    "geocoder>=1.38.1",
    "ipykernel>=6.29.5",
    "llama-stack-client>=0.2.7",
    "mcp>=1.9.2",
    "pymilvus>=2.5.10",
    "python-dotenv>=1.1.0",
    "ragas>=0.2.15",
    "ramalama>=0.8.5",
    "ramalama-stack>=0.1.4",
    "smolagents[litellm]>=1.13.0",
]
